crates/php-parser/tests/snapshots/integration__abstract_const_error.snap
---
source: crates/php-parser/tests/integration.rs
expression: format_errors(&result)
---
cannot use 'abstract' as constant modifier
