crates/php-parser/tests/snapshots/integration__abstract_final_conflict.snap
---
source: crates/php-parser/tests/integration.rs
expression: format_errors(&result)
---
cannot use 'abstract' and 'final' together
