crates/php-parser/tests/snapshots/integration__alt_if_inline_html_terminates.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php if (true): ?> HTML <?php endif; ?>
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "If": {
          "condition": {
            "kind": {
              "Bool": true
            },
            "span": {
              "start": 10,
              "end": 14
            }
          },
          "then_branch": {
            "kind": {
              "Block": [
                {
                  "kind": {
                    "InlineHtml": " HTML "
                  },
                  "span": {
                    "start": 19,
                    "end": 25
                  }
                }
              ]
            },
            "span": {
              "start": 6,
              "end": 31
            }
          },
          "elseif_branches": [],
          "else_branch": null
        }
      },
      "span": {
        "start": 6,
        "end": 38
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 38
  }
}
